Added custom code

--- a/src/UmbracoProject/Views/HomePage.cshtml
+++ b/src/UmbracoProject/Views/HomePage.cshtml
@@ -4,6 +4,7 @@
 @inject Umbraco.Cms.Web.Common.UmbracoHelper umbracoHelper
 @{
     Layout = "Master.cshtml";
+    var repos = UmbracoProject.Code.GithubHelper.GetRepositories("umbraco");
 }
 
 
@@ -116,6 +117,13 @@
         </div>
     </div>
 </section>
+
+@foreach (var repo in repos)
+{
+    <h1>@repo.FullName</h1>
+    <p>@repo.Description</p>
+}
+
 
 <!-- End of Features Section-->
 <section class="overlay bg-fixed">
